--- a/StrawBerryShakeClientDemo/appsettings.json
+++ b/StrawBerryShakeClientDemo/appsettings.json
@@ -1,10 +1,11 @@
 {
   "ContentstackOptions": {
     "Host": "https://graphql.contentstack.com",
-    "ApiKey": "",
-    "DeliveryToken": "",
+    "ApiKey": "blt7ab6a78cfcf3622b",
+    "DeliveryToken": "csbaece5bca7b36a6fb82f18da",
     "Environment": "live",
-    "ManagementToken": "",
-    "Branch": "uat"
+    "ManagementToken": "csdbac9c898b1547ee15be1fc7",
+    "Branch": "uat",
+    "ManagementApiBaseUrl": "https://api.contentstack.io"
   }
 }
